[package]
name = "virtual_display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
#hbb_common = { path = "../hbb_common" }
hbb_common = { git = "https://github.com/frankltr/hbb_common", branch = "main" }
